--- a/helm/prod.yaml
+++ b/helm/prod.yaml
@@ -1,4 +1,4 @@
 component: user
-#params: "DOCUMENTDB:prod.user.mongo,REDIS_HOST:prod.elasticache.endpoint,MONGO_URL:prod.docdb.url.user"
+params: "DOCUMENTDB:prod.user.mongo,REDIS_HOST:prod.elasticache.endpoint,MONGO_URL:prod.docdb.url.user"
 
 
