--- a/helm/prod.yaml
+++ b/helm/prod.yaml
@@ -2,7 +2,7 @@
 component: user
 params: "DOCUMENTDB:prod.user.mongo,REDIS_HOST:prod.elasticache.endpoint,MONGO_URL:prod.docdb.url.user"
 
-schemaLoadJob:
+#schemaLoadJob:
 #  # Specifies whether a service account should be created
 #  create: true
 #  type: mongo
