--- a/helm/prod.yaml
+++ b/helm/prod.yaml
@@ -7,4 +7,10 @@ schemaLoadJob:
   create: true
   type: mongo
 
-
+resources:
+  limits:
+    cpu: 300m
+    memory: 350Mi
+  requests:
+    cpu: 200m
+    memory: 256Mi
